tdf#99388 suppress close comment when PopupMenu is active

With comments in draw/impress these use vcl::windows of type
AnnotationWindow. When the PopupMenu bottom-right is used,
this gets a LoseFocus event and gets closed since this is the
standard mechanism this window closes. This is fatal when
the PopupMenu is open since it uses it as parent window.
To avoid this, a flag is added to the AnnotationWindow
to avoid triggering the close event in that state.

Change-Id: Ic27782e56d192c0963868d9ca560945f8a34394f
Reviewed-on: https://gerrit.libreoffice.org/24280
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>