sd/source/ui/annotations/annotationmanager.cxx
@@ -996,7 +996,24 @@ void AnnotationManagerImpl::ExecuteAnnotationContextMenu( const Reference< XAnno
         }
     }
 
+    AnnotationWindow* pParentAnnotationWindow = dynamic_cast< AnnotationWindow* >( pParent );
+
+    if(pParentAnnotationWindow)
+    {
+        // tdf#99388 make known that PopupMenu is active at parent
+        // to allow suppressing closing of that window if needed
+        pParentAnnotationWindow->setPopupMenuActive(true);
+    }
+
     nId = pMenu->Execute( pParent, rContextRect, PopupMenuFlags::ExecuteDown|PopupMenuFlags::NoMouseUpClose );
+
+    if(pParentAnnotationWindow)
+    {
+        // tdf#99388 reset flag, need to be done before reacting
+        // since closing it is one possible reaction
+        pParentAnnotationWindow->setPopupMenuActive(false);
+    }
+
     switch( nId )
     {
     case SID_REPLYTO_POSTIT:
